--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-router-dom": "^6.27.0",
     "react-spinners": "^0.14.1",
     "tailwind-merge": "^2.5.4",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zustand": "^5.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
